Fix menu on "wide" small screens
The menu didn't look properly on these screens since commit dcec003d0.

On small screens with enough horizontal space to show the menu button,
the logo, and the contents of the menu, all three elements were shown on
the same row, which looked broken.

Now the contents of the menu are shown below the menu button.

Note that, to force this, we're making the contents of the menu 100%
wide. That means links would take the 100% of the space, which would
make it easy to click on a link while trying to scroll when using
touchscreens. So we're making the links as wide as their text, which
also has a disadvantage: it's harder to click on narrow links like
"SDG".

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -574,6 +574,14 @@ body > header,
   @include breakpoint(small only) {
     flex-wrap: wrap;
     justify-content: space-between;
+
+    .responsive-menu {
+      width: 100%;
+
+      a {
+        display: inline-block;
+      }
+    }
   }
 
   @include breakpoint(medium) {
